--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
 body {
   margin: 20px;
 }
+
+.container {
+  padding: 2px;
+  height: 40px;
+  width: 700px;
+  border: 5px solid black;
+}
+
+#intelligenceProgress {
+  background-color: black;
+  height: 100%;
+}
