--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,92 @@
-body {
-  margin: 20px;
+.grid {
+  display: grid;
+  grid-template-columns: 30% 1fr 1fr;
+  grid-template-rows: 10% 1fr 10%;
 }
 
-.container {
-  padding: 2px;
+nav {
+  grid-column: 1/4;
+  height: 100px;
+}
+
+main {
+  grid-column: 2;
+  grid-area: 2;
+}
+
+img {
+  grid-column: 3;
+  grid-row: 2;
+  height: 350px;
+}
+
+aside {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+footer {
+  grid-column: 1/4;
+  grid-row: 3;
+  font-size: 50px;
+  text-align: center;
+  align-items: center;
+}
+
+#herosDropDown {
+  display: flex;
   height: 40px;
+  width: 90%;
+  align-items: center;
+  text-align-last: center;
+  font-size: 20px;
+}
+
+option {
+  text-align-last: center;
+}
+
+.bar {
+  padding: 2px;
+  height: 30px;
   width: 700px;
-  border: 5px solid black;
+  border: 3px solid black;
+
+  background-color: rgb(0, 0, 0);
 }
 
 #intelligenceProgress {
-  background-color: black;
+  background-color: green;
   height: 100%;
+  box-shadow: 0px 0px 40px 5px rgba(0, 128, 0, 0.6);
+}
+
+#strengthProgress {
+  background-color: rgb(128, 0, 32);
+  height: 100%;
+  box-shadow: 0px 0px 40px 5px rgba(128, 0, 32, 0.6);
+}
+
+#speedProgress {
+  background-color: yellow;
+  height: 100%;
+  box-shadow: 0px 0px 40px 5px rgba(255, 255, 0, 0.6);
+}
+
+#durabilityProgress {
+  background-color: lightgreen;
+  height: 100%;
+  box-shadow: 0px 0px 40px 5px rgba(144, 238, 144, 0.6);
+}
+
+#powerProgress {
+  background-color: red;
+  height: 100%;
+  box-shadow: 0px 0px 40px 5px rgba(255, 0, 0, 0.6);
+}
+
+#combatProgress {
+  background-color: blue;
+  height: 100%;
+  box-shadow: 0px 0px 40px 5px rgba(0, 0, 255, 0.6);
 }
