--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,23 @@
+body {
+  background-color: rgb(66, 66, 66);
+  color: white;
+}
+
+h1 {
+  font-family: "Nabla", sans-serif;
+  text-align: center;
+  font-size: 80px;
+  margin: 0;
+}
+h3 {
+  font-size: 40px;
+  font-family: "Sarabun", sans-serif;
+}
+
+h4 {
+  font-size: 20px;
+  font-family: "Sarabun", sans-serif;
+}
 .grid {
   display: grid;
   grid-template-columns: auto 35% 35%;
@@ -22,6 +42,11 @@ main {
 
 div#hero-pic {
   grid-area: pictureDiv;
+}
+
+div#hero-pic-h3 {
+  grid-area: pictureDiv;
+  display: none;
 }
 
 footer {
@@ -51,7 +76,7 @@ option {
 .bar {
   padding: 2px;
   height: 30px;
-  width: 700px;
+  width: 100%;
   border: 3px solid black;
 
   background-color: rgb(0, 0, 0);
@@ -138,39 +163,36 @@ option {
 
 @media (max-width: 1007px) {
   .grid {
-    display: grid;
-    grid-template-columns: 100vh;
-    grid-template-rows: 10% 2% 2% auto auto 10%;
-    grid-template-areas:
-      "nav"
-      "section"
-      "heroName"
-      "pictureDiv"
-      "mainNoName"
-      "footer";
+    display: flex;
+    flex-direction: column;
   }
 
-  nav {
-    grid-area: nav;
+  div#hero-pic-h3 {
+    display: inline;
   }
 
-  section {
-    grid-area: section;
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .nameLabel {
+    display: none;
   }
 
-  #heroName {
-    grid-area: heroName;
+  #h3Name {
+    text-align: center;
   }
-
   div#hero-pic {
-    grid-area: pictureDiv;
+    display: none;
   }
 
-  #mainNoName {
-    grid-area: mainNoName;
+  .bar {
+    height: 20px;
+    border: 1px solid black;
   }
 
-  footer {
-    grid-area: footer;
+  main {
+    margin: 5px;
   }
 }
