--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,46 @@ body {
   color: white;
 }
 
+#marvelComics1000 {
+  position: absolute;
+  top: 100px;
+  left: 100px;
+  filter: blur(5px);
+  z-index: -1;
+}
+
+#xmenCover {
+  position: absolute;
+  top: 379px;
+  right: 137px;
+  filter: blur(5px);
+  z-index: -1;
+}
+
+#supermanComic {
+  position: absolute;
+  top: 870px;
+  left: 316px;
+  filter: blur(5px);
+  z-index: -1;
+}
+
+#oldAvengers {
+  position: absolute;
+  top: 1327px;
+  right: 458px;
+  filter: blur(5px);
+  z-index: -1;
+}
+
+#AdamStrange {
+  position: absolute;
+  top: 10px;
+  right: 458px;
+  filter: blur(5px);
+  z-index: -1;
+}
+
 h1 {
   font-family: "Nabla", sans-serif;
   text-align: center;
@@ -194,5 +234,9 @@ option {
 
   main {
     margin: 5px;
+  }
+
+  #backgroundPhotos {
+    display: none;
   }
 }
