--- a/styles.css
+++ b/styles.css
@@ -3,25 +3,35 @@ body {
   color: white;
 }
 
+nav {
+  background-color: black;
+  border-bottom: 3px solid yellow;
+}
+
+select {
+  margin-left: 35px;
+}
+
+/* BG Images on Desktop */
 #marvelComics1000 {
   position: absolute;
-  top: 100px;
-  left: 100px;
+  top: 18px;
+  left: -80px;
   filter: blur(5px);
   z-index: -1;
 }
 
 #xmenCover {
   position: absolute;
-  top: 379px;
-  right: 137px;
+  top: 130px;
+  right: -10px;
   filter: blur(5px);
   z-index: -1;
 }
 
 #supermanComic {
   position: absolute;
-  top: 870px;
+  top: 760px;
   left: 316px;
   filter: blur(5px);
   z-index: -1;
@@ -29,7 +39,7 @@ body {
 
 #oldAvengers {
   position: absolute;
-  top: 1327px;
+  top: 1293px;
   right: 458px;
   filter: blur(5px);
   z-index: -1;
@@ -38,9 +48,52 @@ body {
 #AdamStrange {
   position: absolute;
   top: 10px;
-  right: 458px;
+  left: 750px;
   filter: blur(5px);
   z-index: -1;
+  height: 1500px;
+}
+
+#BatGirl {
+  position: absolute;
+  top: 1125px;
+  left: -60px;
+  filter: blur(5px);
+  z-index: -4;
+  height: 1000px;
+}
+
+#sheHulk {
+  position: absolute;
+  top: 1401px;
+  left: 2084px;
+  filter: blur(5px);
+  z-index: -4;
+  height: 740px;
+}
+
+#manhattanContainer {
+  position: absolute;
+  width: 694.85px;
+  height: 700px;
+  top: 1401px;
+  left: 853px;
+  overflow: hidden;
+}
+
+#manhattan {
+  position: absolute;
+  filter: blur(5px);
+  z-index: -4;
+  height: 1069px;
+}
+#harleyQuinn {
+  position: absolute;
+  top: 1611px;
+  left: 554px;
+  filter: blur(5px);
+  z-index: -4;
+  height: 500px;
 }
 
 h1 {
@@ -58,10 +111,13 @@ h4 {
   font-size: 20px;
   font-family: "Sarabun", sans-serif;
 }
+
+/* Grid for desktop dimensions */
+
 .grid {
   display: grid;
   grid-template-columns: auto 35% 35%;
-  grid-template-rows: 10% auto 10%;
+  grid-template-rows: 8% auto 6%;
   grid-template-areas:
     "nav nav nav"
     "section main pictureDiv"
@@ -78,6 +134,10 @@ section {
 
 main {
   grid-area: main;
+
+  background-color: rgba(0, 0, 0, 0.85);
+  padding: 10px;
+  padding-right: 20px;
 }
 
 div#hero-pic {
@@ -91,10 +151,17 @@ div#hero-pic-h3 {
 
 footer {
   grid-area: footer;
+  font-family: "Sarabun", sans-serif;
+  background-color: black;
+  border-top: 3px solid yellow;
+  margin-bottom: 0;
 }
 
-img {
+.hero-pic {
   height: 350px;
+  margin-top: 30px;
+  margin-left: 30px;
+  border: 10px solid black;
 }
 
 footer {
@@ -107,7 +174,10 @@ footer {
   width: 90%;
   text-align-last: center;
   font-size: 20px;
+  margin-top: 30px;
 }
+
+/* Progress Bars on Desktop Dimensions */
 
 option {
   text-align-last: center;
@@ -125,51 +195,54 @@ option {
 #intelligenceProgress {
   background-color: green;
   height: 100%;
-  box-shadow: 0px 0px 40px 5px rgba(0, 128, 0, 0.6);
-  animation-name: intelligence;
-  animation-duration: 2s;
+  box-shadow: 0px 0px 40px 2px rgba(0, 128, 0, 0.6);
 }
 
 #strengthProgress {
   background-color: rgb(128, 0, 32);
   height: 100%;
-  box-shadow: 0px 0px 40px 5px rgba(128, 0, 32, 0.6);
+  box-shadow: 0px 0px 40px 2px rgba(128, 0, 32, 0.6);
 }
 
 #speedProgress {
   background-color: yellow;
   height: 100%;
-  box-shadow: 0px 0px 40px 5px rgba(255, 255, 0, 0.6);
+  box-shadow: 0px 0px 10px 2px rgba(255, 255, 0, 0.6);
 }
 
 #durabilityProgress {
   background-color: lightgreen;
   height: 100%;
-  box-shadow: 0px 0px 40px 5px rgba(144, 238, 144, 0.6);
+  box-shadow: 0px 0px 10px 2px rgba(144, 238, 144, 0.6);
 }
 
 #powerProgress {
   background-color: red;
   height: 100%;
-  box-shadow: 0px 0px 40px 5px rgba(255, 0, 0, 0.6);
+  box-shadow: 0px 0px 10px 2px rgba(255, 0, 0, 0.6);
 }
 
 #combatProgress {
   background-color: blue;
   height: 100%;
-  box-shadow: 0px 0px 40px 5px rgba(0, 0, 255, 0.6);
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 255, 0.6);
 }
 
-@media (max-width: 1230px) {
+/* Tablet Dimension
+@media (max-width: 1280px) {
   .grid {
     display: grid;
     grid-template-columns: auto auto;
-    grid-template-rows: 10% 10% auto 10%;
+    grid-template-rows: 6% 10% auto 10%;
     grid-template-areas:
       "nav nav"
       "section main"
       "pictureDiv main"
       "footer footer";
+  }
+
+  h1 {
+    font-size: 70px;
   }
 
   nav {
@@ -182,29 +255,38 @@ option {
 
   select {
     margin: 0 0 0 10px;
+    width: 50%;
   }
 
   main {
     grid-area: main;
+    background-color: black;
   }
 
   div#hero-pic {
     grid-area: pictureDiv;
   }
 
-  img {
-    margin: 0 0 0 10px;
-  }
-
   footer {
     grid-area: footer;
+    font-size: 20px;
+    padding: 10px;
   }
-}
+} */
 
-@media (max-width: 1007px) {
+/* Galaxy S20 Ultra */
+@media (max-width: 412px) {
   .grid {
     display: flex;
     flex-direction: column;
+  }
+
+  select {
+    margin-left: 19px;
+  }
+
+  h1 {
+    font-size: 50px;
   }
 
   div#hero-pic-h3 {
@@ -215,6 +297,7 @@ option {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    height: 500px;
   }
   .nameLabel {
     display: none;
@@ -234,9 +317,22 @@ option {
 
   main {
     margin: 5px;
+    background-color: transparent;
   }
 
   #backgroundPhotos {
     display: none;
+  }
+
+  footer {
+    font-size: 20px;
+    padding: 10px;
+  }
+}
+
+/* iPhone 12 Pro */
+@media (max-width: 390px) {
+  img {
+    height: 450px;
   }
 }
